# MaaStarResonance

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTACT  README.md  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  sidebars.js
.github/: cliff.toml
.github/workflows/: check.yml  install.yml
agent/: logger.py  main.py  module_loader.py  plugin_loader.py  plugin_registry.py
agent/attach/: battle_attach.py  chat_message_attach.py  common_attach.py  fishing_attach.py  little_game_attach.py
agent/constant/fish/: FishData.json
agent/constant/little_games/: VehicleRace.json  __init__.py
agent/constant/map_point/: NavigatePoint.json
agent/custom/: beat_chen_min.py  fishing_action.py  hide_and_seek.py  teleport_action.py  unstable_space.py
agent/custom/general/: chat_message.py
agent/custom/little_games/: beat_chen_min.py  catch_fish.py  cliff_diving.py  dodge_the_ball.py  hide_and_seek.py  laser_spin.py  maj_star.py  vehicle_race.py
agent/utils/packet_capture/: README.md  __init__.py  diagnose.py  message_parser.py  packet_capture_analysis.md  player_tracker.py  position_tracker.py  process_ports.py  sniffer.py  tcp_reassembly.py  test_live.py
assets/: interface.json
docs/关于/: 关于我们.md
docs/功能文档/: 功能文档入口.md
docs/开发者文档/: QuickStart.md  开发者文档入口.md  开发随笔.md  快速开始.md  文档维护流程.md  文档编写规范.md  生成Changelog.md
docs/新手指南/: AMD调优.md  常见问题.md  开始任务.md  新手指南入口.md  模拟器配置.md  环境准备.md  连接程序与确认实例.md
docs/用户文档/: 用户手册入口.md
scripts/: build_all_platforms.py  check_docs_structure.py  generate_changelog.py
src/pages/: index.js
(+54 files in other folders)
