[project]
name = "MaaStarResonance"
version = "0.9.0"
description = "基于MAAFW的星痕共鸣黑盒测试工具"
authors = [
    { name = "233Official", email = "ayusummer233@outlook.com" },
    { name = "AZMIAO", email = "2362020227@qq.com" },
]
license = { text = "AGPL-3.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "maafw==5.10.0",
    "pip>=25.3",
    "pre-commit>=4.5.0",
    "rapidfuzz>=3.14.3",
    "toml>=0.10.2",
    "tzdata>=2025.2",
]

# 自动扫描 agent 下所有包
[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

# 打包 agent 下所有类型的文件
[tool.setuptools.package-data]
agent = ["**/*"]

# 打包包含数据包
[tool.setuptools]
include-package-data = true

# isort检查工具配置
[tool.isort]
src_paths = ["agent", "scropts"]
force_single_line = false
multi_line_output = 0
include_trailing_comma = false
ensure_newline_before_comments = true
line_length = 120
combine_as_imports = true
lines_between_sections = 1
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY"]
